--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
       const unit = document.getElementById('unit').value;
       const wax = parseFloat(document.getElementById('wax').value);
       const percent = parseFloat(document.getElementById('fragrancePercent').value);
-      if (!isNaN(wax) && !isNaN(percent)) {
-        const fragrance = (wax * percent / 100).toFixed(2);
+      if (!isNaN(wax) && !isNaN(percent) && percent > 0 && percent < 100) {
+        const totalWeight = wax / (1 - (percent / 100));
+        const fragrance = (totalWeight * (percent / 100)).toFixed(2);
         const unitLabel = unit === "grams" ? "grams" : "ounces";
-        document.getElementById('result').innerText = `You need ${fragrance} ${unitLabel} of fragrance oil.`;
+        document.getElementById('result').innerText =
+          `You need ${fragrance} ${unitLabel} of fragrance oil.`;
       } else {
-        document.getElementById('result').innerText = 'Please enter valid numbers.';
+        document.getElementById('result').innerText = 'Please enter valid numbers (Fragrance % must be between 0 and 100).';
       }
     }
   </script>
